# api-rag-chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  build_and_push.sh  docker-compose.yml  flipkart_com-ecommerce_sample.csv  main.py  main.tf  products_sample_clean.csv  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml
api/: router.py
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/: main.py
backend/src/api/: router.py
core/: config.py  rag_service.py
frontend/: .firebaserc  .gitignore  Dockerfile  Dockerfile.dev  nginx.conf
models/: schemas.py
src/: main.py
src/api/: router.py
src/core/: config.py  rag_service.py
src/models/: db_models.py  schemas.py
